Added GetProduct in ProductProxyRemote Added GetProducts in ProductProxyRemote Updated Utils to not include empty or null get parameters

--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -20,7 +20,25 @@
       "get": {}
     }
   },
-  "ProductMicroservice": {},
+  "ProductMicroservice": {
+    "GetProduct": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/Products/Details/{item-id}",
+      "get": {}
+    },
+    "GetProducts": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/Products",
+      "get": {
+        "name": "{item-name}",
+        "visible": "{item-visible}",
+        "minprice": "{price-min}",
+        "maxprice": "{price-max}"
+      }
+    }
+  },
   "ReviewMicroservice": {},
   "SupplierMicroservice": {}
 }
