Implemented GetReviews in ReviewProxyRemote Implemented GetReview in ReviewProxyRemote Added GetRating to ReviewProxy Implemented GetRating to ReviewProxyLocal Implemented GetRating to ReviewProxyRemote

--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -39,6 +39,30 @@
       }
     }
   },
-  "ReviewMicroservice": {},
+  "ReviewMicroservice": {
+    "GetReview": {
+
+      "note": "POSSIBLY DEPRECATED",
+
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/review/view",
+      "get": {}
+    },
+    "GetReviews": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/review/list",
+      "get": {
+        "productid": "{item-id}"
+      }
+    },
+    "GetRating": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/review/rating/{item-id}",
+      "get": {}
+    }
+  },
   "SupplierMicroservice": {}
 }
