Updated Controllers to show error message instead of crashing Updated launchSettings to allow Development/Staging/Release Fix Utils createUriGetParameters which stepped over wrong values Fix Utils processString edge case, which resulted in returning "{replace}" instead of null Corrected appsettings.Staging.json

--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -10,30 +10,27 @@
     "GetCustomer": {
       "domain": "https://example.com",
       "port": 443,
-      "path": "/customer/{customer-id}",
-      "get": {}
+      "path": "/customer/{customer-id}"
     },
     "GetCustomers": {
       "domain": "https://example.com",
       "port": 443,
-      "path": "/customer",
-      "get": {}
+      "path": "/customer"
     }
   },
   "ProductMicroservice": {
     "GetProduct": {
       "domain": "https://example.com",
       "port": 443,
-      "path": "/Products/Details/{item-id}",
-      "get": {}
+      "path": "/Products/Details/{item-id}"
     },
     "GetProducts": {
       "domain": "https://example.com",
       "port": 443,
       "path": "/Products",
       "get": {
-        "name": "{item-name}",
-        "visible": "{item-visible}",
+        "name": "{product-name}",
+        "visible": "{product-visible}",
         "minprice": "{price-min}",
         "maxprice": "{price-max}"
       }
@@ -46,8 +43,7 @@
 
       "domain": "https://example.com",
       "port": 443,
-      "path": "/review/view",
-      "get": {}
+      "path": "/review/view"
     },
     "GetReviews": {
       "domain": "https://example.com",
@@ -60,8 +56,7 @@
     "GetRating": {
       "domain": "https://example.com",
       "port": 443,
-      "path": "/review/rating/{item-id}",
-      "get": {}
+      "path": "/review/rating/{item-id}"
     }
   },
   "SupplierMicroservice": {}
