Updated Reviews and Product to reflect remote services data structure Updated appsettings.Staging with information on how to access Reviews

--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -38,17 +38,14 @@
   },
   "ReviewMicroservice": {
     "GetReview": {
-
-      "note": "POSSIBLY DEPRECATED",
-
-      "domain": "https://example.com",
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
       "port": 443,
-      "path": "/review/view"
+      "path": "api/Review/{review-id}"
     },
     "GetReviews": {
-      "domain": "https://example.com",
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
       "port": 443,
-      "path": "/review/list",
+      "path": "api/Review",
       "get": {
         "productid": "{item-id}"
       }
@@ -56,7 +53,7 @@
     "GetRating": {
       "domain": "https://example.com",
       "port": 443,
-      "path": "/review/rating/{item-id}"
+      "path": "api/Review/Rating/{item-id}"
     }
   },
   "SupplierMicroservice": {}
