Corrections for Staging integration

--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -47,11 +47,12 @@
       "port": 443,
       "path": "api/Review",
       "get": {
-        "productid": "{item-id}"
+        "productId": "{item-id}",
+        "userId":  "{customer-id}"
       }
     },
     "GetRating": {
-      "domain": "https://example.com",
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
       "port": 443,
       "path": "api/Review/Rating/{item-id}"
     }
