--- a/StaffFrontend.Test/StaffFrontend.Test.csproj
+++ b/StaffFrontend.Test/StaffFrontend.Test.csproj
@@ -1,11 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
-
-    <Configurations>Debug;Release;Staging</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StaffFrontend\StaffFrontend.csproj" />
+    <ProjectReference Include="..\StaffFrontend3.1\StaffFrontend.csproj" />
   </ItemGroup>
 
 </Project>
