--- a/StaffFrontend/appsettings.json
+++ b/StaffFrontend/appsettings.json
@@ -1,10 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-  }
+  "AllowedHosts": "*"
 }
