fixing naming after update to 3.1

--- a/StaffFrontend/Properties/launchSettings.json
+++ b/StaffFrontend/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "StaffFrontend3._1": {
+    "StaffFrontend": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
