--- a/StaffFrontend.Test/StaffFrontend.Test.csproj
+++ b/StaffFrontend.Test/StaffFrontend.Test.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StaffFrontend3.1\StaffFrontend.csproj" />
+    <ProjectReference Include="..\StaffFrontend\StaffFrontend.csproj" />
   </ItemGroup>
 
 </Project>
