--- a/.github/workflows/development_thamco-staff.yml
+++ b/.github/workflows/development_thamco-staff.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - thamco-staff
+name: Build and deploy ASP.Net Core app to Azure Web App - thamco-staff-staging
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@development
+    - uses: actions/checkout@master
 
     - name: Set up .NET Core
       uses: actions/setup-dotnet@v1
