--- a/.github/workflows/development_dotnet-core.yml
+++ b/.github/workflows/development_dotnet-core.yml
@@ -10,14 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
+      
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.301
-    - name: Install dependencies
-      run: dotnet restore
+        dotnet-version: 3.1.102
+    
     - name: Build
-      run: dotnet build --configuration Staging --no-restore
+      run: dotnet build --configuration Staging
+      
     - name: Test
       run: dotnet test --no-restore --verbosity normal
