--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -1,9 +1,71 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "CustomerMicroservice": {
+    "useFake": true,
+    "GetCustomer": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/customer/{customer-id}"
+    },
+    "GetCustomers": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/customer"
+    }
+  },
+  "ProductMicroservice": {
+    "useFake": true,
+    "GetProduct": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/Products/Details/{item-id}"
+    },
+    "GetProducts": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/Products",
+      "get": {
+        "name": "{product-name}",
+        "visible": "{product-visible}",
+        "minprice": "{price-min}",
+        "maxprice": "{price-max}"
+      }
+    }
+  },
+  "ReviewMicroservice": {
+    "useFake": false,
+    "GetReview": {
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/{review-id}"
+    },
+    "GetReviews": {
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review",
+      "get": {
+        "productId": "{item-id}",
+        "userId": "{customer-id}"
+      }
+    },
+    "GetRating": {
+      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/Rating/{item-id}"
+    }
+  },
+  "SupplierMicroservice": {
+    "useFake": true
+  },
+  "AuthorizationMicroservice": {
+    "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
+    "clientid": "staff_frontend",
+    "domain": "https://thamco-auth-staging.azurewebsites.net"
   }
 }
