--- a/StaffFrontend/appsettings.Staging.json
+++ b/StaffFrontend/appsettings.Staging.json
@@ -7,6 +7,7 @@
     }
   },
   "CustomerMicroservice": {
+    "useFake": true,
     "GetCustomer": {
       "domain": "https://example.com",
       "port": 443,
@@ -19,6 +20,7 @@
     }
   },
   "ProductMicroservice": {
+    "useFake": true,
     "GetProduct": {
       "domain": "https://example.com",
       "port": 443,
@@ -37,6 +39,7 @@
     }
   },
   "ReviewMicroservice": {
+    "useFake": false,
     "GetReview": {
       "domain": "https://stagingthamcoreview.azurewebsites.net",
       "port": 443,
@@ -48,7 +51,7 @@
       "path": "api/Review",
       "get": {
         "productId": "{item-id}",
-        "userId":  "{customer-id}"
+        "userId": "{customer-id}"
       }
     },
     "GetRating": {
@@ -57,5 +60,12 @@
       "path": "api/Review/Rating/{item-id}"
     }
   },
-  "SupplierMicroservice": {}
+  "SupplierMicroservice": {
+    "useFake": true
+  },
+  "AuthorizationMicroservice": {
+    "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
+    "clientid": "staff_frontend",
+    "domain": "https://thamco-auth-staging.azurewebsites.net"
+  }
 }
