Added information about currently logged in user, added template for password change form

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -22,12 +22,12 @@
   "ProductMicroservice": {
     "useFake": true,
     "GetProduct": {
-      "domain": "https://example.com",
+      "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
       "path": "/Products/Details/{item-id}"
     },
     "GetProducts": {
-      "domain": "https://example.com",
+      "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
       "path": "/Products",
       "get": {
