--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -66,6 +66,13 @@
   "AuthorizationMicroservice": {
     "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
     "clientid": "staff_frontend",
-    "domain": "https://thamco-auth-staging.azurewebsites.net"
+    "domain": "https://thamco-auth-staging.azurewebsites.net",
+
+    "UpdatePassword": {
+      "domain": "https://thamco-auth-staging.azurewebsites.net",
+      "path": "api/users/{user-id}",
+      "port": 443,
+      "get": {}
+    }
   }
 }
