--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -61,7 +61,27 @@
     }
   },
   "SupplierMicroservice": {
-    "useFake": true
+    "useFake": true,
+    "GetSuppliers": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "Suppliers"
+    },
+    "GetSupplier": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "SuppliersDetails/{supplier-id}"
+    },
+    "CreateSupplier": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "CreateSupplier"
+    },
+    "EditSupplier": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "EditSuppliers"
+    }
   },
   "AuthorizationMicroservice": {
     "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
