Updated Remote Proxy to list items from remote service, updated Utils to handle Post/Get requests from config

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -61,26 +61,45 @@
     }
   },
   "SupplierMicroservice": {
-    "useFake": true,
+    "useFake": false,
     "GetSuppliers": {
-      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
       "path": "Suppliers"
     },
     "GetSupplier": {
-      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
       "path": "SuppliersDetails/{supplier-id}"
     },
     "CreateSupplier": {
-      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
-      "path": "CreateSupplier"
+      "path": "CreateSupplier",
+      "post": {
+        "SupplierId": "0",
+        "SupplierName": "{supplier-name}",
+        "SupplierAddress": "{supplier-address}",
+        "SupplierEmail": "{supplier-email}",
+        "SupplierContactNumber": "{supplier-phone}"
+      }
     },
     "EditSupplier": {
-      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
-      "path": "EditSuppliers"
+      "path": "/EditSuppliers",
+      "post": {
+        "SupplierId": "{supplier-id}",
+        "SupplierName": "{supplier-name}",
+        "SupplierAddress": "{supplier-address}",
+        "SupplierEmail": "{supplier-email}",
+        "SupplierContactNumber": "{supplier-phone}"
+      }
+    },
+    "DeleteSupplier": {
+      "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
+      "port": 443,
+      "path": "DeleteSuppliers/{supplier-id}"
     }
   },
   "AuthorizationMicroservice": {
