Added restock and remote proxy

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -75,9 +75,9 @@
     "CreateSupplier": {
       "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
-      "path": "CreateSupplier",
+      "path": "/CreateSupplier",
       "post": {
-        "SupplierId": "0",
+        "SupplierId": "2",
         "SupplierName": "{supplier-name}",
         "SupplierAddress": "{supplier-address}",
         "SupplierEmail": "{supplier-email}",
@@ -89,6 +89,7 @@
       "port": 443,
       "path": "/EditSuppliers",
       "post": {
+        "id": "{supplier-id}",
         "SupplierId": "{supplier-id}",
         "SupplierName": "{supplier-name}",
         "SupplierAddress": "{supplier-address}",
@@ -99,7 +100,56 @@
     "DeleteSupplier": {
       "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
-      "path": "DeleteSuppliers/{supplier-id}"
+      "path": "DeleteSuppliers/{supplier-id}",
+      "post": {}
+    }
+  },
+  "RestockMicroservice": {
+    "useFake": false,
+    "GetRestocks": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "/Restocks"
+    },
+    "GetRestock": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "/RestocksDetails/{restock-id}"
+    },
+    "EditRestock": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "/EditRestock",
+      "post": {
+        "id": "{restock-id}",
+        "RestockId": "{restock-id}",
+        "SupplierId": "{restock-supplier-id}",
+        "SProductId": "{restock-product-id}",
+        "Quantity": "{restock-quantity}",
+        "Price": "{restock-price}",
+        "date": "{restock-date}",
+        "approved": "{restock-approved}"
+      }
+    },
+    "DeleteRestock": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "/DeleteRestock/{restock-id}",
+      "post": {}
+    },
+    "CreateRestock": {
+      "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
+      "port": 443,
+      "path": "/CreateRestock",
+      "post": {
+        "RestockId": "{restock-id}",
+        "SupplierId": "{restock-supplier-id}",
+        "SProductId": "{restock-product-id}",
+        "Quantity": "{restock-product-quantity}",
+        "Price": "{restock-price}",
+        "date": "0001-01-01T00:00:00.0001988",
+        "approved": "false"
+      }
     }
   },
   "AuthorizationMicroservice": {
