added passing id when creating supplier

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -77,7 +77,7 @@
       "port": 443,
       "path": "/CreateSupplier",
       "post": {
-        "SupplierId": "2",
+        "SupplierId": "{supplier-id}",
         "SupplierName": "{supplier-name}",
         "SupplierAddress": "{supplier-address}",
         "SupplierEmail": "{supplier-email}",
