hotfix for suppliers delete

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -101,7 +101,9 @@
       "domain": "https://suppliersmicroservice20201202150956.azurewebsites.net",
       "port": 443,
       "path": "DeleteSuppliers/{supplier-id}",
-      "post": {}
+      "post": {
+        "dummy": "dummy"
+      }
     }
   },
   "RestockMicroservice": {
