hackaround for bug with Restock Delete

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -137,7 +137,9 @@
       "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
       "port": 443,
       "path": "/DeleteRestock/{restock-id}",
-      "post": {}
+      "post": {
+        "dummy": "thicc"
+      }
     },
     "CreateRestock": {
       "domain": "https://restockmicroservice20201202152352.azurewebsites.net",
