Fixing not working Editing of Restock

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -127,7 +127,7 @@
         "RestockId": "{restock-id}",
         "SupplierId": "{restock-supplier-id}",
         "SProductId": "{restock-product-id}",
-        "Quantity": "{restock-quantity}",
+        "Quantity": "{restock-product-quantity}",
         "Price": "{restock-price}",
         "date": "{restock-date}",
         "approved": "{restock-approved}"
