Updated Product to have link to reviews. Updated Product listing to have list of reviews. Updated link to reviews

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -41,12 +41,12 @@
   "ReviewMicroservice": {
     "useFake": false,
     "GetReview": {
-      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
       "path": "api/Review/{review-id}"
     },
     "GetReviews": {
-      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
       "path": "api/Review",
       "get": {
@@ -55,7 +55,7 @@
       }
     },
     "GetRating": {
-      "domain": "https://stagingthamcoreview.azurewebsites.net",
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
       "path": "api/Review/Rating/{item-id}"
     }
