Added configuration for listing all products

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -20,7 +20,7 @@
     }
   },
   "ProductMicroservice": {
-    "useFake": true,
+    "useFake": false,
     "GetProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
@@ -29,7 +29,7 @@
     "GetProducts": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "/Products",
+      "path": "api/products",
       "get": {
         "name": "{product-name}",
         "visible": "{product-visible}",
