--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -24,7 +24,7 @@
     "GetProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "/Products/Details/{item-id}"
+      "path": "api/products/details/{item-id}"
     },
     "GetProducts": {
       "domain": "https://thamcoproducts.azurewebsites.net",
