Added Update Customer remote implementation Added Delete Customer remote implementation

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -17,6 +17,23 @@
       "domain": "https://example.com",
       "port": 443,
       "path": "/customer"
+    },
+    "DeleteCustomer": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/customer/delete/{customer-id}"
+    },
+    "UpdateCustomer": {
+      "domain": "https://example.com",
+      "port": 443,
+      "path": "/customer/update",
+      "post": {
+        "id": "{customer-id}",
+        "surname": "{customer-surname}",
+        "firstname": "{customer-firstname}",
+        "address": "{customer-address}",
+        "contact": "{customer-contact}"
+      }
     }
   },
   "ProductMicroservice": {
