Updated the information for products information

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -41,12 +41,12 @@
     "GetProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "api/products/details/{item-id}"
+      "path": "products/details/{item-id}"
     },
     "GetProducts": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "api/products",
+      "path": "products",
       "get": {
         "name": "{product-name}",
         "visible": "{product-visible}",
