--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -77,6 +77,9 @@
       "path": "api/Review/Rating/{item-id}"
     }
   },
+  "RestockMicroservice":{
+    "useFake": true
+  },
   "AuthorizationMicroservice": {
     "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
     "clientid": "staff_frontend",
