Added real implementation (untested)

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -78,7 +78,27 @@
     }
   },
   "RestockMicroservice":{
-    "useFake": true
+    "useFake": true,
+    "GetRestocks": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/GetRestock/",
+      "get": {
+        "AccountName": "{account-name}",
+        "SupplierId": "{supplier-id}",
+        "Approved": "{approved}"
+      }
+    },
+    "GetSuppliers": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/GetAllSuppliers/"
+    },
+    "GetSuppliersProducts": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/GetSuppliersProducts/{supplier-id}"
+    }
   },
   "AuthorizationMicroservice": {
     "secret": "steff_frontand_vrey_secret_hopefuly_nobody_figuras_this_crep_out_or_at_laest_its_long_enough",
