Added UI for processing restock, corrected bug in GetRestocks

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -82,7 +82,7 @@
     "GetRestocks": {
       "domain": "https://restockingmicroservice.azurewebsites.net",
       "port": 443,
-      "path": "/GetRestock/",
+      "path": "/GetRestock/{restock-id}",
       "get": {
         "AccountName": "{account-name}",
         "SupplierId": "{supplier-id}",
