fixed integration bug

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -78,12 +78,13 @@
     }
   },
   "RestockMicroservice":{
-    "useFake": true,
+    "useFake": false,
     "GetRestocks": {
       "domain": "https://restockingmicroservice.azurewebsites.net",
       "port": 443,
-      "path": "/GetRestock/{restock-id}",
+      "path": "/GetRestock",
       "get": {
+        "Id": "{restock-id}",
         "AccountName": "{account-name}",
         "SupplierId": "{supplier-id}",
         "Approved": "{approved}"
