Added auth info for remote requests

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -65,7 +65,7 @@
     "GetReviews": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review",
+      "path": "api/ReviewList",
       "get": {
         "productId": "{item-id}",
         "userId": "{customer-id}"
