Fixed bug where restock products couldnt be loaded

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -98,7 +98,7 @@
     "GetSuppliersProducts": {
       "domain": "https://restockingmicroservice.azurewebsites.net",
       "port": 443,
-      "path": "/GetSuppliersProducts/{supplier-id}"
+      "path": "/GetSupplierProducts/{supplier-id}"
     }
   },
   "AuthorizationMicroservice": {
