Updated products link

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -41,7 +41,7 @@
     "GetProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "products/details/{item-id}"
+      "path": "products/view/{item-id}"
     },
     "GetProducts": {
       "domain": "https://thamcoproducts.azurewebsites.net",
