--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -53,6 +53,11 @@
         "minprice": "{price-min}",
         "maxprice": "{price-max}"
       }
+    },
+    "DeleteProduct": {
+      "domain": "https://thamcoproducts.azurewebsites.net",
+      "port": 443,
+      "path": "products/Delete/{item-id}"
     }
   },
   "ReviewMicroservice": {
@@ -77,7 +82,7 @@
       "path": "api/Review/Rating/{item-id}"
     }
   },
-  "RestockMicroservice":{
+  "RestockMicroservice": {
     "useFake": false,
     "GetRestocks": {
       "domain": "https://restockingmicroservice.azurewebsites.net",
