Added Adding products

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -58,6 +58,18 @@
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
       "path": "products/Delete/{item-id}"
+    },
+    "AddProduct": {
+      "domain": "https://thamcoproducts.azurewebsites.net",
+      "port": 443,
+      "path": "products/Create",
+      "post": {
+        "Name": "{product-name}",
+        "Description": "{product-description}",
+        "Price": "{product-price}",
+        "Supply": "{product-supply}",
+        "Available": "{product-available}"
+      }
     }
   },
   "ReviewMicroservice": {
