Added update products

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -70,6 +70,18 @@
         "Supply": "{product-supply}",
         "Available": "{product-available}"
       }
+    },
+    "UpdateProduct": {
+      "domain": "https://thamcoproducts.azurewebsites.net",
+      "port": 443,
+      "path": "products/Edit/{product-id}",
+      "post": {
+        "Name": "{product-name}",
+        "Description": "{product-description}",
+        "Price": "{product-price}",
+        "Supply": "{product-supply}",
+        "Available": "{product-available}"
+      }
     }
   },
   "ReviewMicroservice": {
