Corrected spelling to ensure consistency

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -41,7 +41,7 @@
     "GetProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "products/view/{item-id}"
+      "path": "products/view/{product-id}"
     },
     "GetProducts": {
       "domain": "https://thamcoproducts.azurewebsites.net",
@@ -57,7 +57,7 @@
     "DeleteProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
       "port": 443,
-      "path": "products/Delete/{item-id}"
+      "path": "products/Delete/{product-id}"
     },
     "AddProduct": {
       "domain": "https://thamcoproducts.azurewebsites.net",
