Updated settings for create product

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -64,11 +64,11 @@
       "port": 443,
       "path": "products/Create",
       "post": {
-        "Name": "{product-name}",
-        "Description": "{product-description}",
-        "Price": "{product-price}",
-        "Supply": "{product-supply}",
-        "Available": "{product-available}"
+        "name": "{product-name}",
+        "desc": "{product-description}",
+        "price": "{product-price}",
+        "supply": "{product-supply}",
+        "available": "{product-available}"
       }
     },
     "UpdateProduct": {
