--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -99,6 +99,17 @@
       "domain": "https://restockingmicroservice.azurewebsites.net",
       "port": 443,
       "path": "/GetSupplierProducts/{supplier-id}"
+    },
+    "CreateRestock": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/CreateRestock/",
+      "post": {
+        "AccountName": "{account-name}",
+        "ProductID": "{product-id}",
+        "Qty": "{product-quantity}",
+        "SupplierID": "{supplier-id}"
+      }
     }
   },
   "AuthorizationMicroservice": {
