Fixed bugs with products Edit and Delete

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -76,11 +76,11 @@
       "port": 443,
       "path": "products/Edit/{product-id}",
       "post": {
-        "Name": "{product-name}",
-        "Description": "{product-description}",
-        "Price": "{product-price}",
-        "Supply": "{product-supply}",
-        "Available": "{product-available}"
+        "name": "{product-name}",
+        "desc": "{product-description}",
+        "price": "{product-price}",
+        "supply": "{product-supply}",
+        "available": "{product-available}"
       }
     }
   },
