Added delete reviews by product ID when product is removed

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -104,6 +104,11 @@
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
       "path": "api/Review/Rating/{item-id}"
+    },
+    "DeleteByProductId": {
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/DeleteByProduct/{product-id}"
     }
   },
   "RestockMicroservice": {
