Added List Hidden and hide/unhide

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -100,6 +100,15 @@
         "userId": "{customer-id}"
       }
     },
+    "GetHiddenReviews": {
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "port": 443,
+      "path": "api/HiddenReviewList",
+      "get": {
+        "productId": "{item-id}",
+        "userId": "{customer-id}"
+      }
+    },
     "GetRating": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
@@ -109,6 +118,16 @@
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
       "path": "api/Review/DeleteByProduct/{product-id}"
+    },
+    "HideReview": {
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/Hide/{review-id}"
+    },
+    "UnhideReview": {
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/RecoverHidden/{review-id}"
     }
   },
   "RestockMicroservice": {
