Added removing of PII when deleting customer

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -119,6 +119,11 @@
       "port": 443,
       "path": "api/Review/DeleteByProduct/{product-id}"
     },
+    "DeletePII": {
+      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "port": 443,
+      "path": "api/Review/DeletePII/{customer-id}"
+    },
     "HideReview": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
