--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -112,27 +112,27 @@
     "GetRating": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review/Rating/{item-id}"
+      "path": "api/ReviewRating/{item-id}"
     },
     "DeleteByProductId": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review/DeleteByProduct/{product-id}"
+      "path": "api/DeleteReviewByProduct/{product-id}"
     },
     "DeletePII": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review/DeletePII/{customer-id}"
+      "path": "api/DeleteReviewPII/{customer-id}"
     },
     "HideReview": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review/Hide/{review-id}"
+      "path": "api/HideReview/{review-id}"
     },
     "UnhideReview": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/Review/RecoverHidden/{review-id}"
+      "path": "api/RecoverHiddenReview/{review-id}"
     }
   },
   "RestockMicroservice": {
