Corrected hide/unhide url

--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -127,12 +127,18 @@
     "HideReview": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/HideReview/{review-id}"
+      "path": "api/HideReview/{review-id}",
+      "post": {
+        "dummy": "thicc"
+      }
     },
     "UnhideReview": {
       "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
       "port": 443,
-      "path": "api/RecoverHiddenReview/{review-id}"
+      "path": "api/RecoverHiddenReview/{review-id}",
+      "post": {
+        "dummy": "thicc"
+      }
     }
   },
   "RestockMicroservice": {
