--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -174,6 +174,24 @@
         "Qty": "{product-quantity}",
         "SupplierID": "{supplier-id}"
       }
+    },
+    "ApproveRestock": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/UpdateRestock/{restock-id}",
+      "post": {
+        "AccountName": "{account-name}",
+        "CardNumber": "{card-number}",
+        "Approved": "true"
+      }
+    },
+    "RejectRestock": {
+      "domain": "https://restockingmicroservice.azurewebsites.net",
+      "port": 443,
+      "path": "/DeleteRestock/{restock-id}",
+      "post": {
+        "dummy": "thicc"
+      }
     }
   },
   "AuthorizationMicroservice": {
