--- a/StaffFrontend/appsettings.Development.json
+++ b/StaffFrontend/appsettings.Development.json
@@ -87,12 +87,12 @@
   "ReviewMicroservice": {
     "useFake": false,
     "GetReview": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/Review/{review-id}"
     },
     "GetReviews": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/ReviewList",
       "get": {
@@ -101,7 +101,7 @@
       }
     },
     "GetHiddenReviews": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/HiddenReviewList",
       "get": {
@@ -110,22 +110,22 @@
       }
     },
     "GetRating": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/ReviewRating/{item-id}"
     },
     "DeleteByProductId": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/DeleteReviewByProduct/{product-id}"
     },
     "DeletePII": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/DeleteReviewPII/{customer-id}"
     },
     "HideReview": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/HideReview/{review-id}",
       "post": {
@@ -133,7 +133,7 @@
       }
     },
     "UnhideReview": {
-      "domain": "https://thamcoreviews20201209115436.azurewebsites.net",
+      "domain": "https://thamcoreviews20210112152245.azurewebsites.net/",
       "port": 443,
       "path": "api/RecoverHiddenReview/{review-id}",
       "post": {
